WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
55279
Plug-in process crashes when using GuardMalloc
https://bugs.webkit.org/show_bug.cgi?id=55279
Summary
Plug-in process crashes when using GuardMalloc
Anders Carlsson
Reported
2011-02-25 17:40:08 PST
Plug-in process crashes when using GuardMalloc
Attachments
Patch
(1.31 KB, patch)
2011-02-25 17:41 PST
,
Anders Carlsson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2011-02-25 17:41:31 PST
Created
attachment 83907
[details]
Patch
Anders Carlsson
Comment 2
2011-02-25 17:46:18 PST
Committed
r79752
: <
http://trac.webkit.org/changeset/79752
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug