2011-02-25  Anders Carlsson  <andersca@apple.com>

Reviewed by Darin Adler.

        Plug-in process crashes when using GuardMalloc
        https://bugs.webkit.org/show_bug.cgi?id=55279
        <rdar://problem/9044618>

        Update m_environmentPointer after copying the environment variables.

        * UIProcess/Launcher/mac/ProcessLauncherMac.mm:
        (WebKit::EnvironmentVariables::copyEnvironmentVariables):


Canonical link: https://commits.webkit.org/69670@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79752 268f45cc-cd09-0410-ab3c-d52691b4dbfc